[package]
name = "boplats-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.9"
scraper = "0.17"
clap = { version = "4.4", features = ["derive"] }
